# qt4_cmake_example

./: CMakeLists.txt  README.md  circle.yaml  helloqtwindow.cpp  helloqtwindow.h  helloqtwindow.ui  main.cpp
.circleci/: config.yaml
.github/workflows/: build_cpp.yml
